Fix page to avoid overflow

--- a/src/SettingsPages/PrivacySettings.css
+++ b/src/SettingsPages/PrivacySettings.css
@@ -24,7 +24,7 @@
 
 .privacy__div:last-child {
     border-bottom: none;
-    padding-bottom: 3rem;
+    padding-bottom: 2.4rem;
 }
 
 .title1 {
